--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1{
     color: blue;
     text-align: center;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 30px;
     
 }
 .ex{
@@ -27,7 +27,10 @@ h2{
     text-align: center;
 }
 p{
+        border: 2px solid red;
     font-family: 'Times New Roman', Times, serif;
+    margin: 5px;
+    padding: 5px;
 }
 img{
     height: auto;
