--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@ header{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #186A3B;
+    background-color: blue;
     top:0;
     left: 0;
     right: 0;
+    margin: auto;
+    padding: 3px;
 
 }
 #leftbox{
@@ -35,14 +37,15 @@ header{
 #navbar{
     display: flex;
     flex-direction: row;
-    margin: 0 1rem;
+    margin: 0rem;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2rem;
+    font-family: 'Times New Roman', Times, serif;
 }
 #navbar a{
     text-align: center;
     color: white;
-    margin: 0 2rem;
+    margin: 2rem;
     font-family: 'Dancing Script', Cursive, Arial;
 }
 #welcome{
@@ -53,8 +56,8 @@ header{
 }
 #placeimg {
     margin: 0 2rem;
-    width: 25rem;
-    height: 200px;
+    width: 70rem;
+    height: 300px;
 }
 #help{
     padding: 3px;
@@ -70,7 +73,7 @@ h1{
 }
 #help button{
     width: 150px;
-    background-color: #186A3B;
+    background-color: blueviolet;
     text-align: center;
     border-radius: 1rem;
     color: white;
@@ -97,6 +100,12 @@ h1{
     width: 20rem;
     border-radius: 10px;
 }
+.courseimgi{
+    width: auto;
+    width:19rem;
+    border-radius: 10px;
+    height: 200px;
+}
 .web{
     margin: 2rem;
     background-color: white;
@@ -113,7 +122,7 @@ h1{
 }
 .but button{
     font-size: 18px;
-    background-color: #186A3B;
+    background-color: blue;
     text-align: center;
     padding: 0.5rem;
     width: 150px;
@@ -121,7 +130,7 @@ h1{
     border-radius: 1rem;
 }
 footer{
-    background-color:#186A3B ;
+    background-color:blueviolet ;
     margin-top: 2rem;
     color:white;
     padding: 0.5rem;
