--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #main{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #c8d8cf;
+    font-size: large;
 }
 #headerimg{
     width: 12rem;
